<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="edu.orangecoastcollege.cs273.bfazeli.inandout.OrderActivity"
            android:columnCount="2"
            android:useDefaultMargins="true"
            android:background="@drawable/order_background">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/textView"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/double_double"
        android:id="@+id/textView2"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="right" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/doubleDoubleEditText"
        android:layout_row="1"
        android:layout_column="1"
        android:digits="0123456789" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/cheeseburgers"
        android:id="@+id/textView3"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_gravity="right" />2

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/cheeseburgerEditText"
        android:layout_row="2"
        android:layout_column="1"
        android:digits="0123456789" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/french_fries"
        android:id="@+id/textView4"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_gravity="right" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/frenchFriesEditText"
        android:layout_row="3"
        android:layout_column="1"
        android:digits="0123456789" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/shakes"
        android:id="@+id/textView5"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_gravity="right" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/shakesEditText"
        android:layout_row="4"
        android:layout_column="1"
        android:digits="0123456789" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/fountain_drinks"
        android:id="@+id/textView6"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_gravity="right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/small"
        android:id="@+id/textView7"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_gravity="right" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/smallDrinksEditText"
        android:layout_row="6"
        android:layout_column="1"
        android:digits="0123456789" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/medium"
        android:id="@+id/textView8"
        android:layout_row="7"
        android:layout_column="0"
        android:layout_gravity="right" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/mediumDrinksEditText"
        android:layout_row="7"
        android:layout_column="1"
        android:digits="0123456789" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/large"
        android:id="@+id/textView9"
        android:layout_row="8"
        android:layout_column="0"
        android:layout_gravity="right" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/largeDrinksEditText"
        android:layout_row="8"
        android:layout_column="1"
        android:digits="0123456789" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_btn"
        android:id="@+id/placeOrderButton"
        android:layout_row="8"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:onClick="sendOrder"/>

</GridLayout>